Prepare launch readiness updates